Refactored all files to integrate php

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
 
 <body>
-    <section class="modal">
+    <!--<section class="modal">
         <nav class="modal-nav">
             <h1 class="m-blog-title">Title</h1>
             <a class="exit-modal">Exit</a>
@@ -33,23 +37,22 @@
             <button class="btn-m prev">Prev</button>
             <button class="btn-m next">Next</button>
         </section>
-
-    </section>
+    </section>-->
 
 
     <header class="index-header">
         <a href="index.html">
-            <img src="assets/svg/logo.svg" class="logo" alt="Teaspot logo">
+            <img src="assets/svg/logo.svg" class="logo" alt="The Teaspot logo" title="The Teaspot logo">
         </a>
         <div class="info-div">
-            <h1 class="p-header">The place to spill the tea</h1>
+            <h1 class="p-header" title="The place to spill the tea">The place to spill the tea</h1>
         </div>
         <nav class="icon-holders">
-            <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo">
+            <!-- <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo" title="Dark Mode Logo"> -->
             <a href="login.html">
-                <img src="assets/svg/avatar.svg" class="svg-n avatar" alt="login icon">
+                <img src="assets/svg/avatar.svg" class="svg-n avatar" alt="login icon" title="User Login Icon">
             </a>
-            <img src="assets/svg/ham.svg" class="svg-n hamburger" alt="hamburger menu logo">
+            <img src="assets/svg/ham.svg" class="svg-n hamburger" alt="hamburger menu logo" title="Filter Menu Logo">
         </nav>
     </header>
 
@@ -64,13 +67,13 @@
                 <button class="sort"><span></span></button>
             </div>
             <article class="a-close">
-                <p>=</p>
+                <p title="Filter Menu Logo">=</p>
             </article>
         </aside>
 
         <section class="blog-grid">
             <article data-filter="category-a" class="item">
-                <figure>
+                <figure title="Tea and macaroons">
                     <img loading="lazy" src="assets/img/1.jpg" alt="Tea and macaroons">
                 </figure>
                 <div class="blog-title">
@@ -78,15 +81,19 @@
                     <p>Tutorial</p>
                 </div>
                 <blockquote class="blog-p">
-                    Baking with tea can be a fun and unique way to add flavor to your baked goods. Matcha and Earl Grey
-                    are two of the most popular teas to use in baking, and they can add a distinct and delicious flavor
-                    to your recipes. In this blog post, we'll explore the world of baking with tea, and we'll provide
+                    Baking with tea can be a fun and unique way to add flavor to your baked goods. Matcha and Earl
+                    Grey
+                    are two of the most popular teas to use in baking, and they can add a distinct and delicious
+                    flavor
+                    to your recipes. In this blog post, we'll explore the world of baking with tea, and we'll
+                    provide
                     you with some delicious recipes for Matcha and Earl Grey baked goods.
                 </blockquote>
+                <a href="tea.php" class="article-a" id="article-a">See Blog</a>
             </article>
 
             <article data-filter="category-a" class="item">
-                <figure>
+                <figure title="Cinammon Tea and fruit">
                     <img loading="lazy" src="assets/img/2.jpg" alt="Cinammon Tea and fruit">
                 </figure>
                 <div class="blog-title">
@@ -98,10 +105,11 @@
                     through generations. It may seem simple, but there are a few key steps to follow to ensure a
                     delicious cup of tea every time.
                 </blockquote>
+                <a href="english.php" class="article-a" id="article-a">See Blog</a>
             </article>
 
             <article data-filter="category-c" class="category-c item cosy">
-                <figure>
+                <figure title="Rooster Yarn Piece Covered Teapot">
                     <img src="assets/img/3.jpg" alt="Rooster Yarn Piece Covered Teapot" loading="lazy" />
                 </figure>
                 <div class="blog-title">
@@ -113,10 +121,11 @@
                     your tea warm, but it can also add to the aesthetics of your tea-drinking experience and make a
                     statement about your style and taste
                 </blockquote>
+                <a href="cosy.php" class="article-a" id="article-a">See Blog</a>
             </article>
 
             <article data-filter="category-a" class="item">
-                <figure>
+                <figure title="Squirrels drinking tea">
                     <img src="assets/img/4.jpg" alt="Squirrels drinking tea" loading="lazy" />
                 </figure>
                 <div class="blog-title">
@@ -129,10 +138,11 @@
                     some suggestions for delicious and sophisticated tea party snacks that are sure to impress your
                     guests.
                 </blockquote>
+                <a href="party.php" class="article-a" id="article-a">See Blog</a>
             </article>
 
             <article data-filter="category-b" class="item hi">
-                <figure>
+                <figure title="Tea with Matcha">
                     <img src="assets/img/5.jpg" alt="Tea with Matcha" loading="lazy" />
                 </figure>
                 <div class="blog-title">
@@ -145,10 +155,13 @@
                     also found its way into the world of baking. When used in baking, matcha can add a vibrant green
                     color and a delicate, earthy flavor to your recipes. Here are some of our favorite Matcha recipes:
                 </blockquote>
+                <a href="routine.php" class="article-a" id="article-a">See Blog</a>
             </article>
 
             <article data-filter="category-b" class="item hi">
-                <img src="assets/img/7.jpg" alt="Tea with Matcha" loading="lazy" />
+                <figure title="HTTP code image">
+                    <img src="assets/img/7.jpg" alt="HTTP code image" loading="" />
+                </figure>
                 <div class="blog-title">
                     <h2>HTTP</h2>
                     <p>Lifestyle</p>
@@ -159,6 +172,7 @@
                     drinking tea and using teapots? In this blog post, we'll explore the connection between tea,
                     teapots, and the HTTP 418 error.
                 </blockquote>
+                <a href="http.php" class="article-a" id="article-a">See Blog</a>
             </article>
         </section>
     </main>
@@ -166,16 +180,17 @@
     <footer>
         <section class="f-links">
             <a href="index.html" class="f-link">Home</a>
-            <a href="#" class="f-link">About</a>
+            <a href="about.html" class="f-link">About</a>
             <a href="login.html" class="f-link">Login</a>
         </section>
         <form>
             <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
             <input type="text" id="newsletter" name="" />
+            <button data-filter="" class="btn">Submit</button>
         </form>
     </footer>
     <script src="js/app.js"></script>
-    <script src="js/modal.js"></script>
+    <script src="js/jquery.js"></script>
 </body>
 
 </html>
